--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -37,7 +37,7 @@
   font-size: 13px;
   font-weight: 500;
   line-height: 23px;
-  text-decoration-line: strikethrough;
+  text-decoration-line: line-through;
 }
 
 @mixin typo-price-big {
