feat: style root component

--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -3,8 +3,7 @@
   [ngSrc]="'mobile/' + IMG_NAME"
   ngSrcset="343w, 433w, 547w, 691w, 872w"
   sizes="calc(100vw - 32px)"
-  width="343"
-  height="240"
+  fill
   placeholder
   priority
   alt=""
