--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<h1>Deployment successful!</h1>
+<app-image class="image" />
+<div class="main">
+  <hgroup>
+    <p class="overline">Perfume</p>
+    <h1 class="heading">Gabrielle Essence Eau De Parfum</h1>
+  </hgroup>
+  <p class="body">
+    A floral, solar and voluptuous interpretation composed by Olivier Polge,
+    Perfumer-Creator for the House of CHANEL.
+  </p>
+  <div class="prices">
+    <span class="price-big">{{ 149.99 | currency: "USD" }}</span>
+    <span class="price-small">{{ 169.99 | currency: "USD" }}</span>
+  </div>
+  <app-button class="button" />
+</div>
