--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @use "index" as *;
 
 body {
+  background-color: $color-canvas;
+
   // Typography
   font-feature-settings:
     "clig" off,
@@ -8,7 +10,6 @@ body {
   font-style: normal;
   line-height: normal;
 
-  // Center content for manual testing
   display: grid;
   place-items: center;
   min-height: 100vh;
