feat: use fill mode for desktop

--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -13,8 +13,7 @@
   <img
     [ngSrc]="'desktop/' + IMG_NAME"
     ngSrcset="1x, 1.5x, 2x, 2.5833333333333335x"
-    width="300"
-    height="450"
+    fill
     placeholder
     priority
     alt=""
