--- a/src/app/image/image.component.scss
+++ b/src/app/image/image.component.scss
@@ -2,10 +2,14 @@
 
 :host {
   display: block;
+  position: relative;
 
   @include mobile {
-    position: relative;
     height: 240px;
+  }
+
+  @include desktop {
+    width: 300px;
   }
 }
 
