feat: add aria-hidden for cart icon

--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,4 +1,4 @@
 <button type="button">
-  <app-svg-cart-icon class="icon" />
+  <app-svg-cart-icon class="icon" aria-hidden="true" />
   <span class="label">Add to Cart</span>
 </button>
