--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,12 @@
     Perfumer-Creator for the House of CHANEL.
   </p>
   <div class="prices">
-    <span class="price-big">{{ 149.99 | currency: "USD" }}</span>
-    <span class="price-small">{{ 169.99 | currency: "USD" }}</span>
+    <span class="price-big" title="Discounted Price">{{
+      149.99 | currency: "USD"
+    }}</span>
+    <span class="price-small" title="Original Price">{{
+      169.99 | currency: "USD"
+    }}</span>
   </div>
   <app-button class="button" />
 </div>
