refactor: move root component to home component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,68 +1,3 @@
-@use "index" as *;
-
 :host {
-  display: flex;
-
-  @include mobile {
-    padding: 28px 16px;
-    flex-direction: column;
-  }
-
-  @include desktop {
-    padding: 48px 0;
-    width: 600px;
-  }
-}
-
-.main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  background-color: $color-background;
-
-  @include mobile {
-    border-radius: 0 0 $root-border-radius $root-border-radius;
-    padding: 24px;
-  }
-
-  @include desktop {
-    border-radius: 0 $root-border-radius $root-border-radius 0;
-    padding: 32px;
-  }
-}
-
-.overline {
-  @include typo-overline;
-}
-
-.heading {
-  @include typo-heading;
-  margin: 12px 0 16px;
-
-  @include desktop {
-    margin: 20px 0 24px;
-  }
-}
-
-.body {
-  @include typo-body;
-}
-
-.prices {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin: 24px 0 20px;
-
-  @include desktop {
-    margin: 28px 0;
-  }
-}
-
-.price-big {
-  @include typo-price-big;
-}
-
-.price-small {
-  @include typo-price-small;
+  display: block;
 }
